# moly

./: .gitignore  AGENTS.md  Cargo.toml  README.md
.github/workflows/: builds.yml  checks.yml  claude-ci-fix.yml  claude-code-review.yml  claude.yml  page.yml  release.yml
ai-kit/: Cargo.toml
ai-kit/examples/cli/: Cargo.toml
ai-kit/examples/cli/src/: main.rs
ai-kit/examples/egui/: Cargo.toml
ai-kit/examples/egui/src/: main.rs
ai-kit/src/: clients.rs  lib.rs  mcp.rs  prelude.rs  protocol.rs  utils.rs
ai-kit/src/clients/: multi.rs  openai.rs  openai_image.rs  openai_realtime.rs  tester.rs
ai-kit/src/controllers/: chat.rs
ai-kit/src/protocol/: attachment.rs  client.rs  entity.rs  message.rs  realtime.rs  tool.rs
ai-kit/src/utils/: asynchronous.rs  platform.rs  sse.rs
book/src/: advanced.md  basics.md  crate-docs.md  custom-client.md  custom-content.md  integrate.md  moly.md  multiple-providers.md  quickstart.md  web.md
moly-kit/: Cargo.toml  README.md
moly-kit/examples/moly-mini/: Cargo.toml
moly-kit/examples/moly-mini/src/: app.rs  demo_chat.rs  ui.rs
moly-kit/src/: lib.rs  prelude.rs  utils.rs  widgets.rs
moly-kit/src/clients/: openai_image.rs
moly-kit/src/utils/: audio.rs  makepad.rs
moly-kit/src/utils/makepad/: hits.rs
moly-kit/src/widgets/: attachment_list.rs  attachment_view.rs  attachment_viewer_modal.rs  avatar.rs  chat.rs  chat_line.rs  citation.rs  message_markdown.rs  message_thinking_block.rs  messages.rs  model_selector.rs  model_selector_item.rs  model_selector_list.rs  moly_modal.rs  prompt_input.rs  realtime.rs  standard_message_content.rs  stt_input.rs
moly-sync/: Cargo.toml
moly-sync/src/: server.rs
packaging/ios/: README.md
src/: app.rs  lib.rs  main.rs  runtime.rs  updater.rs
src/chat/: chat_history.rs  chat_history_card.rs  chat_history_card_options.rs  chat_params.rs  chat_screen.rs  chat_screen_mobile.rs  chat_view.rs  chats_deck.rs  deep_inquire_content.rs  deep_inquire_stages.rs  delete_chat_modal.rs  entity_button.rs  mod.rs  moly_bot_filter.rs
src/data/: bot_fetcher.rs  deep_inquire_client.rs  mcp_servers.rs  mod.rs  moly_client.rs  openclaw_client.rs  preferences.rs  providers.rs  store.rs  supported_providers.json
src/data/chats/: chat.rs  mod.rs
src/data/downloads/: download.rs  mod.rs
src/data/search/: mod.rs
src/landing/: download_item.rs  model_card.rs  model_files_item.rs
src/mcp/: mcp_screen.rs
src/my_models/: downloaded_files_row.rs
src/settings/: add_provider_modal.rs  mod.rs  moly_server_screen.rs  provider_view.rs  providers.rs  providers_screen.rs  sync_modal.rs  utilities_modal.rs
src/shared/: actions.rs  bot_context.rs  download_notification_popup.rs  mod.rs  update_notification_popup.rs  updater_notification_popup.rs  utils.rs
src/shared/utils/: attachments.rs  version.rs
src/shared/utils/filesystem/: adapter.rs  mod.rs
src/shared/utils/filesystem/adapters/: native.rs
