[package]
name = "moly-kit"
version = "0.2.3"
edition = "2024"

[dependencies]
reqwest = { version = "0.12", features = ["rustls-tls"], default-features = false }
scraper = { version = "0.25.0" }
serde_json = { version = "1.0.149" }

makepad-widgets = { git = "https://github.com/wyeworks/makepad", rev = "53b2e5c84" }
makepad-code-editor = { git = "https://github.com/wyeworks/makepad", rev = "53b2e5c84" }
math_widget = { git = "https://github.com/wyeworks/makepad", rev = "53b2e5c84" }
robius-open = { git = "https://github.com/project-robius/robius", rev = "a62b82c8" }
aitk = { git = "https://github.com/moly-ai/aitk", rev = "6cd8a74d", features = ["async-rt", "http", "mcp"] }

cfg-if = "1.0.0"
log = "0.4"
futures = "0.3.31"
url = "2.5.8"

[features]
default = []
# default = ["full"]
realtime-clients = ["aitk/realtime-clients"]
api-clients = ["aitk/api-clients"]
full = ["default", "realtime-clients", "api-clients"]
